--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,9 @@ description = ""
 authors = ["Timon"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.10,<4.0"
 torch = "^2.5.1"
+numpy = "^2.2.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
