--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ transformers = "^4.48.0"
 config = "^0.5.1"
 torchvision = "^0.20.1"
 tqdm = "^4.67.1"
+matplotlib = "^3.10.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^6.2.5"
