--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ config = "^0.5.1"
 torchvision = "^0.20.1"
 tqdm = "^4.67.1"
 matplotlib = "^3.10.0"
+wandb = "^0.19.4"
+sacrebleu = "^2.5.1"
+seaborn = "^0.13.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^6.2.5"
